# coppy

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  changelog.md  compose.yaml  copier.yaml  copier_py_package.py  extensions.py  hatch.toml  mise.toml  noxfile.py  pip-audit-ignore.txt  pyproject.toml  readme.md  ruff.toml  tasks_lib.py  test_cop_py_package.py  tests.py  towncrier.toml  version.py
.circleci/: config.yml
.github/workflows/: docs.yaml  nox.yaml
changelog.d/: +pip-audit-ignore.added.md  +precommit.changed.md  56.breaking.md  64.changed.md  68.changed.md  72.changed.md  74.breaking.md  74.changed.md  75.breaking.md  76.changed.md  77.changed.md  82.breaking.md  82.changed.md  83.changed.md  91.changed.md
ci/: .gitignore  Dockerfile  pytest.ini
docs/: Changelog.md  Coppy Dev.md  Home.md  Mise.md
gh-actions/nox-run/: action.yaml
gh-actions/uv-prep/: action.yaml
mise/: config.toml
mise-tasks/: bump  demo  docker-build  sandbox.py
mise/tasks/: bootstrap  bump  ci-nox  demo  docker-bash  docker-nox  publish-ci-image
requirements/: base.txt  ci.in  ci.txt  dev.in  dev.txt  tests.in  tests.txt
src/: coppy_extensions.py  coppy_tasks_lib.py  cppy_extensions.py  cppy_utils.py  tasks_lib.py
src/coppy/: cli.py  logs.py  paths.py  sandbox.py  testing.py  utils.py  version.py
src/tests/: conftest.py  test_copierpy.py  test_coppy.py  test_cppy.py  test_sandbox.py  test_template.py
systemd/: mise-uv-update.service  mise-uv-update.timer  systemd-failure-notify  systemd-failure-notify@.service.jinja  tooling.service
tasks/: bump  changelog.py  demo  docker-build  mise-uv-init.py  sandbox.py  test-user-journalctl.sh  test-user-prep.py  test-user-systemctl.sh
template/: .coveragerc.jinja  .gitignore  .pre-commit-config.yaml  hatch.toml.jinja  mise.toml  mise.toml.jinja  noxfile.py  noxfile.py.jinja  pip-audit-ignore.txt  pyproject.toml.jinja  readme.md.jinja  ruff.toml  ruff.toml.jinja  {{ _copier_conf.answers_file }}.jinja
template/.circleci/: config.yml.jinja
template/.mise/: config.toml.jinja
template/mise/: config.toml.jinja
template/mise-tasks/: bootstrap
template/requirements/: base.in  ci.in  dev.in
template/src/: conftest.py
template/tasks/: bootstrap  bump.jinja  copier-update  mise-uv-init.py
template/{% if use_circleci%}.circleci{% endif %}/: config.yml.jinja
tests/: conftest.py  test_copierpy.py
tests/coppy_tests/: conftest.py  test_coppy.py  test_sandbox.py  test_template.py
(+15 files in other folders)
