[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'copier-py-package'
authors = [{name = 'Randy Syring', email = 'randy.syring@level12.io'}]
dynamic = ['version']
requires-python = '>=3.12'
dependencies = [
    "copier>=9.5.0",
    "copier-templates-extensions>=0.3.0",
]


[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "pre-commit"},
    {include-group = "nox"},
    "click>=8.1.8",
    "hatch>=1.14.0",
    "ruff>=0.9.6",
]
# Used by nox
pre-commit = [
    'pre-commit>=4.1.0',
]
# Used by nox
tests = [
    "blazeutils>=0.7.0",
    'pytest>=8.3.4',
]
# Used by CI
nox = [
    'nox>=2025.2.9',
]
