[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'coppy'
authors = [{name = 'Randy Syring', email = 'randy.syring@level12.io'}]
dynamic = ['version']
requires-python = '~=3.12.0'
dependencies = [
    "blazeutils>=0.7.0",
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "copier>=9.5.0",
    "copier-template-extensions>=0.3.0",
]


[project.scripts]
coppy = 'coppy.cli:cli'


[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "pre-commit"},
    {include-group = "nox"},
    "hatch>=1.14.0",
    "ruff>=0.9.6",
    "towncrier>=25.8.0",
]
# Used by nox
pre-commit = [
    'pre-commit>=4.1.0',
    'pre-commit-uv>=4.1.4',
]
# Used by nox
tests = [
    'pytest>=8.3.4',
]
# Used by CI
nox = [
    'nox>=2025.2.9',
]
